--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -1,12 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<PublishSingleFile>true</PublishSingleFile>
 		<SelfContained>true</SelfContained>
 		<PublishReadyToRun>true</PublishReadyToRun>
-    <Version>0.1.2</Version>
-
+    <Version>1.0.1-alpha</Version>
+    <InformationalVersion>This is a prerelease package</InformationalVersion>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Description>This is a prerelease version</Description>
   </PropertyGroup>
 
 	<ItemGroup>
