--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -5,6 +5,7 @@
 		<PublishSingleFile>true</PublishSingleFile>
 		<SelfContained>true</SelfContained>
 		<PublishReadyToRun>true</PublishReadyToRun>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -15,10 +16,6 @@
 		<PackageReference Include="System.IO.Abstractions" Version="3.0.2" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
 		<PackageReference Include="Microsoft.NET.HostModel" Version="3.1.6" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Crossroads.Core\Crossroads.Core.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="appsettings.json">
@@ -44,5 +41,9 @@
 			</None>
 		</ItemGroup>
 	</Target>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\Crossroads.Launcher\Crossroads.Launcher.csproj" />
+	</ItemGroup>
 </Project>
 
