Consolidate into Crossroads.Launcher

--- a/test/crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
+++ b/test/crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
@@ -23,4 +23,28 @@
 		<PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="3.0.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Update="assets\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	
+	<Target Name="CopyLauncher" BeforeTargets="CopyAdditionalFiles">
+		<ItemGroup>
+			<LauncherFile Include="..\..\src\Crossroads.Launcher\$(OutDir)**"></LauncherFile>
+			<None Include="@(LauncherFile)">
+				<Link>Crossroads.Launcher\%(LauncherFile.FileName)%(LauncherFile.Extension)</Link>
+				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			</None>
+		</ItemGroup>
+	</Target>
+
+	<Target Name="CopyAppHost" BeforeTargets="CopyAdditionalFiles" DependsOnTargets="ResolveFrameworkReferences">
+		<ItemGroup>
+			<None Include="$(AppHostSourcePath)">
+				<Link>apphost\apphost.exe</Link>
+				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			</None>
+		</ItemGroup>
+	</Target>
 </Project>
