--- a/src/Crossroads.Launcher/Crossroads.csproj
+++ b/src/Crossroads.Launcher/Crossroads.csproj
@@ -5,6 +5,8 @@
 		<SelfContained>true</SelfContained>
 		<PublishReadyToRun>true</PublishReadyToRun>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<RootNamespace>Crossroads</RootNamespace>
+		<AssemblyName>Crossroads</AssemblyName>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
