--- a/test/crossroads.Launcher.Test/Crossroads.Test.csproj
+++ b/test/crossroads.Launcher.Test/Crossroads.Test.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<ItemGroup>
-		<ProjectReference Include="..\..\src\Crossroads.Launcher\Crossroads.Launcher.csproj" />
+		<ProjectReference Include="..\..\src\Crossroads.Launcher\Crossroads.csproj" />
 		<ProjectReference Include="..\Crossroads.Test.Utility\Crossroads.Test.Utility.csproj" />
 	</ItemGroup>
 
