--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -29,11 +29,11 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --verbosity normal
       # run: dotnet test --no-build --verbosity normal -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
-    - name: Publish
-      run: dotnet publish -c Release -o package
+    - name: Pack
+      run: dotnet pack --no-build --configuration Release --output package
     - name: Package published artifact
       uses: actions/upload-artifact@v2
       with:
         name: package
-        path: package/*
+        path: package/*.nupkg
         if-no-files-found: error
