--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -27,8 +27,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --configuration Release
     - name: Test
-      # run: dotnet test --no-build --configuration Release --verbosity normal
-      run: dotnet test --no-build --verbosity normal -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+      run: dotnet test --verbosity normal -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
     - name: Pack
       run: dotnet pack --no-build --configuration Release --output package
     - name: Package published artifact
