Add correct file path for launcher files

--- a/src/Crossroads.Launcher/appsettings.json
+++ b/src/Crossroads.Launcher/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Launcher": {
     "Command": "",
-    "Args":  ""
+    "Args": ""
   },
   "Logging": {
     "LogLevel": {
-      "Default": "None"
+      "Default": "Information",
+      "Microsoft": "None"
     }
   }
 }
