build separated commands into a single command line builder

--- a/src/Crossroads/Properties/launchSettings.json
+++ b/src/Crossroads/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Crossroads": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "inspect --package newnotepad.exe"
     }
   }
 }
