--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -8,6 +8,7 @@
 		<AssemblyName>Crossroads</AssemblyName>
 		<Configuration>Debug;Release</Configuration>
 		<VersionPrefix>1.0.0-preview</VersionPrefix>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
