--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -36,3 +36,5 @@ jobs:
         name: package
         path: package/*.nupkg
         if-no-files-found: error
+    # - name: Publish to nuget
+    #     run: dotnet nuget push "./package/*.nupkg" --no-symbols true --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrets.NUGET_KEY }}
