--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<PublishSingleFile>true</PublishSingleFile>
+		<!--<PublishSingleFile>true</PublishSingleFile>-->
 		<SelfContained>true</SelfContained>
 		<PublishReadyToRun>true</PublishReadyToRun>
 		<RootNamespace>Crossroads</RootNamespace>
@@ -26,7 +26,8 @@
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="System.IO.Abstractions" Version="3.0.2" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
-    <PackageReference Include="Microsoft.NET.HostModel" Version="3.1.16" />
+    <PackageReference Include="Microsoft.NET.HostModel" Version="6.0.6-servicing.22266.4" />
+    <!--<PackageReference Include="Microsoft.NET.HostModel" Version="3.1.16" />-->
     
 		<PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
 			<PrivateAssets>all</PrivateAssets>
