--- a/test/Crossroads.Test/Crossroads.Test.csproj
+++ b/test/Crossroads.Test/Crossroads.Test.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+	  <TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\Crossroads\Crossroads.csproj" />
 	</ItemGroup>
