--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -36,7 +36,7 @@ jobs:
           flags: unittests
           fail_ci_if_error: true
       - name: Pack
-        run: dotnet pack --no-build --configuration Release --output package
+        run: dotnet pack .\src\Crossroads\Crossroads.csproj --no-build --configuration Release --output package
       - name: Package published artifact
         uses: actions/upload-artifact@v2
         with:
