--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -54,10 +54,24 @@
 	</ItemGroup>
 	
 	<!--<Target Name="CopyLauncher" BeforeTargets="CopyAdditionalFiles">
+
+	<Target Name="CopyLauncher" BeforeTargets="CopyAdditionalFiles">
+
 		<ItemGroup>
 			<LauncherFile Include="..\Crossroads.Launcher\$(OutDir)**"></LauncherFile>
-			<None Include="@(LauncherFile)">
-				<Link>.\%(LauncherFile.FileName)%(LauncherFile.Extension)</Link>
+
+			<None Include="@(LauncherFile)" >
+				<Link>Crossroads.Launcher\%(LauncherFile.FileName)%(LauncherFile.Extension)</Link>
+				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			</None>
+		</ItemGroup>
+	</Target>
+	
+	<Target Name="CopyLauncherLinux" BeforeTargets="CopyAdditionalFiles">
+		<ItemGroup>
+			<LauncherFileLinux Include="..\Crossroads.Launcher\bin\Debug\netcoreapp3.1\linux-x64\**"></LauncherFileLinux>
+			<None Include="@(LauncherFileLinux)" >
+				<Link>Crossroads.LauncherLinux\%(LauncherFileLinux.FileName)%(LauncherFileLinux.Extension)</Link>
 				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			</None>
 		</ItemGroup>
