migrate to .net6 framework + fix build errors after branching

--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -18,7 +18,7 @@
 			<file src="bin\Debug\*.*" target="lib\netcoreapp3.1" />
 		</files>-->
     <PackageReadmeFile>README.md</PackageReadmeFile>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
   
   <ItemGroup>
@@ -100,3 +100,4 @@
     <RemoveDir Directories=".\$(OutDir)LauncherFiles" />
   </Target>
 </Project>
+	
