--- a/src/Crossroads/Crossroads.csproj
+++ b/src/Crossroads/Crossroads.csproj
@@ -55,22 +55,20 @@
 	
 	<!--<Target Name="CopyLauncher" BeforeTargets="CopyAdditionalFiles">
 
-	<Target Name="CopyLauncher"  BeforeTargets="CopyAdditionalFiles">
-
+	<Target Name="CopyLauncher" BeforeTargets="CopyAdditionalFiles">
 		<ItemGroup>
-			<LauncherFile Include="..\Crossroads.Launcher\$(OutDir)**"></LauncherFile>
-
-			<None Include="@(LauncherFile)" >
+			<LauncherFile Include="..\Crossroads.Launcher\bin\Debug\netcoreapp3.1\win-x64\**"></LauncherFile>
+			<None Include="@(LauncherFile)">
 				<Link>Crossroads.Launcher\%(LauncherFile.FileName)%(LauncherFile.Extension)</Link>
 				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			</None>
 		</ItemGroup>
 	</Target>
 	
-	<Target Name="CopyLauncherLinux" Condition="'$(RuntimeIdentifier)' == 'linux-x64'" BeforeTargets="CopyAdditionalFiles">
+	<Target Name="CopyLauncherLinux" BeforeTargets="CopyAdditionalFiles">
 		<ItemGroup>
 			<LauncherFileLinux Include="..\Crossroads.Launcher\bin\Debug\netcoreapp3.1\linux-x64\**"></LauncherFileLinux>
-			<None Include="@(LauncherFileLinux)" >
+			<None Include="@(LauncherFileLinux)">
 				<Link>Crossroads.LauncherLinux\%(LauncherFileLinux.FileName)%(LauncherFileLinux.Extension)</Link>
 				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			</None>
