--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 ﻿<Project>
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
 </Project>
