--- a/test/Crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
+++ b/test/Crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
@@ -1,4 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Include="..\Crossroads.Test\Utility\CommandLineExtenions.cs" Link="CommandLineExtenions.cs" />
 	</ItemGroup>
