--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
       - name: Test
-        run: dotnet test --verbosity normal -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+        run: dotnet test --no-build --configuration Release --verbosity normal -p:CollectCoverage=true -p:CoverletOutputFormat=opencover
       - name: Upload Test Report to Codecov
         uses: codecov/codecov-action@v3
         with:
