--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 ﻿<Project>
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
+		<!--<TargetFramework>netcoreapp3.1</TargetFramework>-->
 		<!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
 	</PropertyGroup>
 </Project>
